--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<title>nostr-bookmark-replacer</title>
+		<title>nostr-bookmark-backup</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
